[package]
name = "chisel-stringtable"
version = "0.1.6"
edition = "2021"
authors = ["Jonny Coombes <jcoombes@jcs-software.co.uk>"]
rust-version = "1.56"
description = "Simple hash-based string cache"
license = "MIT OR Apache-2.0"
keywords = ["strings", "hash", "interning", "cache"]
categories = []
repository = "https://github.com/jonnycoombes/chisel-stringtable"

[dependencies]

[dev-dependencies]
rand = "0.8.5"

[features]
default = []
